overflow issue

--- a/assets/css/tech-signup.css
+++ b/assets/css/tech-signup.css
@@ -62,7 +62,7 @@
 
 @media (min-width: 1366px) {
   .signup-content {
-    height: 110vh;
+    height: 112vh;
   }
 }
 
